--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1",
     "jspdf": "^1.4.1",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
